toggle jump fixed re:

--- a/view/frontend/web/css/source/_module.less
+++ b/view/frontend/web/css/source/_module.less
@@ -177,7 +177,7 @@
                     }
 
                     .hww-faq-answer {
-                        display: block;
+                        display: none;
                         padding: 10px 20px;
                         margin-bottom: 15px;
                         background-color: #f6f6f691;
